# caep

./: CMakeLists.txt  LICENSE
caep/: CMakeLists.txt  caep.h
caep/adapter/: adapter.cpp  adapter.h  batch_adapter.h  filtered_adapter.h
caep/adapter/file_adapter/: batch_file_adapter.cpp  batch_file_adapter.h  file_adapter.cpp  file_adapter.h  filtered_file_adapter.cpp  filtered_file_adapter.h
caep/caep/: caeper.cpp  caeper.h  caeper_interface.h  internal_api.cpp  logger.cpp  management_api.cpp  rbac_api.cpp  rbac_api_with_domain.cpp
caep/config/: config.cpp  config.h  config_interface.h
caep/config/test/: test.ini
caep/config/testdata/: testini.ini
caep/effect/: default_effector.cpp  default_effector.h  effect.h  effector.h
caep/exception/: adapter_exception.h  caep_enforcer_exception.h  caep_exception.h  illegal_argument_exception.h  io_exception.h  missing_required_sections.h  rbac_exception.h  unsupported_operation_exception.h  weak_ptr_exception.h
caep/ip_parser/exception/: parser_exception.cpp  parser_exception.h
caep/ip_parser/parser/: CIDR.h  CIDRMask.cpp  CIDRMask.h  IP.cpp  IP.h  IPMask.h  IPNet.cpp  IPNet.h  IPv4.cpp  IPv4.h  allFF.cpp  allFF.h  byte.h  dtoi.cpp  dtoi.h  equal.cpp  equal.h  parseCIDR.cpp  parseCIDR.h  parseIP.cpp  parseIP.h  parseIPv4.cpp  parseIPv4.h  parseIPv6.cpp  parseIPv6.h  xtoi.cpp  xtoi.h
caep/log/: Logger.h  default_logger.h  log_util.h
caep/log/thread_util/: condition.h  count_down_latch.cpp  count_down_latch.h  current_thread.h  mutex_lock.h  noncopyable.h  thread.cpp  thread.h
caep/model/: matcher.cpp  matcher.h  model.cpp  model.h  section.cpp  section.h
caep/rbac/: default_role_manager.cpp  default_role_manager.h  role_manager.h
caep/util/: EndWith.cpp  Split.cpp  Tailor.cpp  built_in_functions.cpp  built_in_functions.h  caep_util.cpp  caep_util.h  util.h
example/: basic_rbac_model.csv  basic_rbac_model.ini  model.ini  model_example.ini  policy.csv  policy_example.csv  rbac_with_domain.csv  rbac_with_domain.ini
test/: CMakeLists.txt  adapter_test.cpp  caeper_test.cpp  config_test.cpp  matcher_test.cpp  model_test.cpp  role_manager_test.cpp  util_test.cpp
